deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prestrafe-gsi
spec:
  selector:
    matchLabels:
      app: prestrafe-gsi
  template:
    metadata:
      labels:
        app: prestrafe-gsi
    spec:
      containers:
        - name: gsi
          image: prestrafe-gsi:latest
          ports:
            - name: http-gsi
              containerPort: 8337
              protocol: TCP
