deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prestrafe-gsi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: prestrafe.com
      http:
        paths:
          - path: /twitchbot
            pathType: Prefix
            backend:
              service:
                name: prestrafe-gsi
                port:
                  name: http-gsi
